# CalEPD

./: CMakeLists.txt  README.md  epd4spi.cpp  epdspi.cpp
include/: epd4spi.h  gdeh042Z21.h  gdew042t2.h  iointerface.h
models/color/: gdeh042Z21.cpp
